deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: athlete-server-deploy
spec:
  selector:
    matchLabels:
      app: athlete
  replicas: 1
  template:
    metadata:
      labels:
        app: athlete
    spec:
      containers:
      - name: athlete-container
        image: vihar/athlete-server
        imagePullPolicy: Never
        ports:
          - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: athlete-service
spec:
  selector:
    app: athlete
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
