ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: ingress-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    #- host:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: athlete-service
                port:
                  number: 80
